k8s/keycloak-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: keycloak-route
  namespace: keycloak-namespace
spec:
  parentRefs:
    - name: kong
      namespace: default  # Pointing to the Kong Gateway in default namespace
  hostnames:
    - "auth.s4v3.local"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: keycloak
          port: 8080
